gccida/c2/bitmap_clear
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_clear/src/bitmap.c:715:12: error: expected expression
*( _OWORD *)&head->first = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_clear/src/bitmap.c:715:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&head->first = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_clear/src/obj/bitmap.o] Error 1
